refactor: update song handling logic and improve error handling in songController

--- a/spotify-backend/.env
+++ b/spotify-backend/.env
@@ -1,4 +1,4 @@
-CLOUDINARY_NAME = "dg9rxgqs7"
-CLOUDINARY_API_KEY = "277572186232492" 
-CLOUDINARY_SECRET_KEY = "SBjRjbE7psbl6ktFF-Ubq9NFXQQ"
-MONGODB_URI = "mongodb+srv://koushik369mondal:Koushik123@cluster0.q6x7z.mongodb.net"
+CLOUDINARY_NAME=dg9rxgqs7
+CLOUDINARY_API_KEY=277572186232492 
+CLOUDINARY_SECRET_KEY=SBjRjbE7psbl6ktFF-Ubq9NFXQQ
+MONGODB_URI=mongodb+srv://koushik369mondal:Koushik123@cluster0.q6x7z.mongodb.net
