--- a/spotify-backend/package.json
+++ b/spotify-backend/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
+  "author": "Kaushik Mandal",
   "license": "ISC",
-  "description": "",
+  "description": "A Spotify clone backend built with Node.js, Express, and MongoDB.",
   "dependencies": {
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
