Enhance workflow run names for build size, CI, code quality, dependency update, PR validation, security scan, and stale issue management

--- a/.github/workflows/build-size.yml
+++ b/.github/workflows/build-size.yml
@@ -1,5 +1,7 @@
 name: Build Size Report
 
+run-name: 📦 Build size analysis for ${{ github.event.pull_request.title || github.ref_name }}
+
 on:
   pull_request:
     branches: [main, develop]
