--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: CI
 
+run-name: 🔍 Running CI checks on ${{ github.ref_name }}
+
 on:
   push:
     branches: [main, develop]
@@ -77,6 +79,14 @@ jobs:
         run: npm run build
         env:
           VITE_BACKEND_URL: http://localhost:4000
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        if: matrix.node-version == '20.x'
+        with:
+          name: admin-build
+          path: ./spotify-admin/dist
+          retention-days: 7
 
   frontend:
     name: Frontend CI
